[package]
name = "ranagrams"
version = "0.2.3"
authors = ["dfhoughton <dfhoughton@gmail.com>","jwmhjwmh@gmail.com"]
description= "anagram discovery tool"
homepage = "https://github.com/dfhoughton/ranagrams"
repository = "https://github.com/dfhoughton/ranagrams"
readme = "README.md"
keywords = [ "anagram", "language", "game" ]
categories = [ "games", "command-line-utilities" ]
license = "GPL-2.0"

[profile.release]
panic = "abort"

[[bin]]
name = "rana"
path = "src/main.rs"

[dependencies]
num_cpus = "1.9.0"
mpmc = "0.1.5" # for queue
clap = "2.32.0"
rand = "0.4.5"
dirs = "1"